fix: исправлены модели UserModel, AdModel, CommentModel с аннотациями Hibernate и Swagger fix: улучшены DTO классы согласно OpenAPI-спецификации fix: изменены контроллеры UserController, AdController, CommentController, AuthController с аннотациями OpenAPI feat: добавлены сервисы UserServiceImpl, AdServiceImpl, CommentServiceImpl, AuthServiceImpl с базовой логикой и логированием fix: исправлен маппинг между сущностями и DTO через UserMapper, AdMapper, CommentMapper feat: добавлена авторизация и регистрация пользователя с использованием Spring Security feat: реализована логика смены пароля пользователем и обновления профиля feat: реализовано добавление, обновление, получение и удаление объявлений с загрузкой изображений feat: реализовано добавление, обновление, получение и удаление комментариев к объявлениям feat: реализовано получение объявлений и комментариев авторизованного пользователя feat: добавлены валидаторы и сообщения об ошибках для всех DTO согласно OpenAPI feat: добавлены глобальные исключения и собственные Exception-классы fix: исправлен маппинг ExtendedAd с учётом конструктора с полным набором полей fix: обновлён AdServiceImpl под реальные изображения и работу с репозиторием fix: реализована загрузка аватарки пользователя и сохранение в файловую систему fix: исправлена логика loginUser и registerUser для обработки ошибок и соответствия статусам fix: корректно возвращаются 400/401/403/404 коды ошибок по OpenAPI спецификации fix: добавлены тесты для всех контроллеров: AuthController, UserController, AdController, CommentController feat: добавлены custom Exceptions