@@ -1,8 +1,15 @@
 package ru.skypro.homework.service.impl;
 
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
-import ru.skypro.homework.dto.*;
+import ru.skypro.homework.dto.Ad;
+import ru.skypro.homework.dto.Ads;
+import ru.skypro.homework.dto.CreateOrUpdateAd;
+import ru.skypro.homework.dto.ExtendedAd;
+import ru.skypro.homework.exceptions.*;
 import ru.skypro.homework.mapper.AdMapper;
 import ru.skypro.homework.models.AdModel;
 import ru.skypro.homework.models.UserModel;
@@ -10,78 +17,118 @@ import ru.skypro.homework.repository.AdRepository;
 import ru.skypro.homework.repository.UserRepository;
 import ru.skypro.homework.service.AdService;
 
-import javax.persistence.EntityNotFoundException;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static org.springframework.security.core.context.SecurityContextHolder.getContext;
 
 @Service
+@RequiredArgsConstructor
+@Slf4j
 public class AdServiceImpl implements AdService {
 
     private final AdRepository adRepository;
-    private final AdMapper adMapper;
     private final UserRepository userRepository;
+    private final AdMapper adMapper;
 
-    public AdServiceImpl(AdRepository adRepository,
-                         AdMapper adMapper,
-                         UserRepository userRepository
-                         ) {
-        this.adRepository = adRepository;
-        this.adMapper = adMapper;
-        this.userRepository = userRepository;
-    }
+    @Value("${app.upload.dir}")
+    private String imageDir;
+
+    @Value("${app.photo}")
+    private String imageDefault;
+
+    @Value("${app.upload.absolute-path}")
+    private boolean isUseAbsolutePath;
 
     @Override
     public Ads getAdsCount() {
-        List<Ad> ads = adRepository.findAll().stream()
-                .map(adMapper::toDto)
-                .collect(Collectors.toList());
+        List<AdModel> allAds = adRepository.findAll();
+        List<Ad> ads = allAds.stream().map(adMapper::toDto).toList();
+        log.debug("Найдено объявлений: {}", ads.size());
         return new Ads(ads.size(), ads);
     }
 
     @Override
-    public Ad createAd(CreateOrUpdateAd dto, MultipartFile image) {
-        AdModel model = adMapper.fromCreateDto(dto);
-        model.setImage("/images/" + image.getOriginalFilename());
-
-        // Временно заглушка: автор с ID = 1
-        UserModel author = userRepository.findById(1L).orElseThrow();
-        model.setAuthor(author);
-
-        return adMapper.toDto(adRepository.save(model));
+    public Ads getUserAdsCount() {
+        UserModel user = getCurrentUser();
+        List<AdModel> userAdModels = adRepository.findByAuthorId(user.getId());
+        List<Ad> userAds = userAdModels.stream().map(adMapper::toDto).toList();
+        log.debug("Объявлений пользователя {}: {}", user.getEmail(), userAds.size());
+        return new Ads(userAds.size(), userAds);
     }
 
     @Override
-    public ExtendedAd getAdById(Integer id) {
-        AdModel model = adRepository.findById(id).orElseThrow(EntityNotFoundException::new);
+    public ExtendedAd getAdById(Long id) {
+        AdModel model = adRepository.findById(id)
+                .orElseThrow(AdNotFoundResponseException::new);
+        log.debug("Объявление по id {} найдено", id);
         return adMapper.toExtendedDto(model);
     }
 
     @Override
-    public Ad updateAd(Integer id, CreateOrUpdateAd dto) {
-        AdModel model = adRepository.findById(id).orElseThrow();
+    public Ad createAd(CreateOrUpdateAd dto, MultipartFile image) {
+        UserModel user = getCurrentUser();
+        AdModel model = adMapper.fromCreateDto(dto);
+        model.setAuthor(user);
+        model.setImage(saveAdImage(image));  // универсальный метод
+        AdModel saved = adRepository.save(model);
+        log.info("Создано объявление id={}, автор={}", saved.getId(), user.getEmail());
+        return adMapper.toDto(saved);
+    }
+
+    @Override
+    public Ad updateAd(Long id, CreateOrUpdateAd dto) {
+        AdModel model = adRepository.findById(id)
+                .orElseThrow(AdNotFoundResponseException::new);
         adMapper.updateModel(model, dto);
-        return adMapper.toDto(adRepository.save(model));
+        AdModel saved = adRepository.save(model);
+        log.info("Объявление id={} обновлено", saved.getId());
+        return adMapper.toDto(saved);
     }
 
     @Override
-    public void deleteAd(Integer id) {
+    public void updateAdImage(Long id, MultipartFile image) {
+        AdModel model = adRepository.findById(id)
+                .orElseThrow(AdNotFoundResponseException::new);
+        model.setImage(saveAdImage(image));
+        AdModel saved = adRepository.save(model);
+        log.info("Изображение для объявления id={} обновлено", saved.getId());
+    }
+
+    @Override
+    public void deleteAd(Long id) {
         adRepository.deleteById(id);
+        log.info("Объявление id={} удалено", id);
     }
 
-    @Override
-    public Ads getUserAdsCount() {
-        UserModel author = userRepository.findById(1L).orElseThrow(); // заглушка
-        List<Ad> myAds = adRepository.findAll().stream()
-                .filter(a -> a.getAuthor().getId().equals(author.getId()))
-                .map(adMapper::toDto)
-                .collect(Collectors.toList());
-        return new Ads(myAds.size(), myAds);
+    private UserModel getCurrentUser() {
+        String email = getContext().getAuthentication().getName();
+        return userRepository.findByEmail(email)
+                .orElseThrow(CurrentUserNotFoundResponseException::new);
     }
 
-    @Override
-    public void updateAdImage(Integer id, MultipartFile image) {
-        AdModel model = adRepository.findById(id).orElseThrow();
-        model.setImage("/images/" + image.getOriginalFilename());
-        adRepository.save(model);
+    private String saveAdImage(MultipartFile image) {
+        if (image == null || image.isEmpty() || image.getOriginalFilename() == null) {
+            return imageDir + imageDefault;
+        }
+
+        String filename = image.getOriginalFilename();
+        String absolutePath = "";
+        if (!isUseAbsolutePath) {
+            System.out.println("NOOOOO!");
+            absolutePath = System.getProperty("user.dir");
+        }
+        Path savePath = Paths.get(absolutePath, imageDir, "/images/ads", filename);
+        try {
+            Files.createDirectories(savePath.getParent());
+            image.transferTo(savePath.toFile());
+        } catch (IOException e) {
+            log.error("Ошибка при сохранении файла {}: {}", filename, e.getMessage());
+            throw new ImageAdsSaveException(e.getMessage());
+        }
+        return "/".concat(imageDir) + "/images/ads/" + filename;
     }
 }
